--- a/pom.xml
+++ b/pom.xml
@@ -102,7 +102,13 @@
         <artifactId>hibernate-core</artifactId>
         <version>6.4.4.Final</version>
     </dependency>
-</dependencies>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
+
+    </dependencies>
 
 <build>
     <plugins>
